# win32-pixel-probe

./: .gitignore  Cargo.toml  README.md  madocore144.md  size.ps1
docs/: madocore-144.md
docs/superpowers/plans/: 2026-06-01-madocore144.md
docs/superpowers/specs/: 2026-06-01-madocore144-design.md  2026-06-01-madocore144-v0-4-stage-pack-design.md  2026-06-01-madocore144-v0-5-rule-hooks-design.md
src/: main.rs
